--- a/server/core/pom.xml
+++ b/server/core/pom.xml
@@ -19,6 +19,12 @@
         <version>${dropwizard.version}</version>
     </dependency>
 
+	<dependency>
+		<groupId>com.sun.jersey.contribs</groupId>
+		<artifactId>jersey-multipart</artifactId>
+		<version>1.18.1</version>
+	</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
