--- a/server/core/pom.xml
+++ b/server/core/pom.xml
@@ -31,6 +31,13 @@
 			<version>${dropwizard.version}</version>
 		</dependency>
 
+		
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-views-freemarker</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
