--- a/server/core/pom.xml
+++ b/server/core/pom.xml
@@ -59,6 +59,20 @@
 	</dependencies>
 
 	<build>
+      <pluginManagement>
+          <plugins>
+              <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.1</version>
+                  <configuration>
+                      <source>1.7</source>
+                      <target>1.7</target>
+                      <compilerArgument></compilerArgument>
+                  </configuration>
+              </plugin>
+          </plugins>
+      </pluginManagement>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -109,6 +123,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
