--- a/server/core/pom.xml
+++ b/server/core/pom.xml
@@ -51,6 +51,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.sangupta</groupId>
+			<artifactId>jopensurf</artifactId>
+			<version>1.0.0</version>
+		</dependency>		
+		
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
