--- a/server/core/pom.xml
+++ b/server/core/pom.xml
@@ -39,6 +39,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.bazaarvoice.dropwizard</groupId>
+			<artifactId>dropwizard-configurable-assets-bundle</artifactId>
+			<version>0.2.0-rc1</version>
+		</dependency>		
+		
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
