Servimos tambien estaticos desde dentro de la aplicacion para poder servir el upload.html

--- a/server/core/core.yml
+++ b/server/core/core.yml
@@ -86,6 +86,9 @@ database:
 assets:
   overrides:
     /images: /home/whatshappening/uploads
+    /static: src/main/resources/assets/
   mimeTypes:
     jpg: image/jpg
-    png: image/png    
+    png: image/png
+    html: text/html
+
