--- a/server/core/pom.xml
+++ b/server/core/pom.xml
@@ -37,7 +37,13 @@
 			<artifactId>dropwizard-views-freemarker</artifactId>
 			<version>${dropwizard.version}</version>
 		</dependency>
-		
+	
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-assets</artifactId>
+			<version>${dropwizard.version}</version>
+		</dependency>		
+
 		<dependency>
 			<groupId>com.bazaarvoice.dropwizard</groupId>
 			<artifactId>dropwizard-configurable-assets-bundle</artifactId>
