--- a/client/android/whatshappening/AndroidManifest.xml
+++ b/client/android/whatshappening/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".HelloAndroidActivity" >
+        <activity android:name=".WhatsHappeningActivity"
+            	  android:configChanges="keyboardHidden|orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
