--- a/client/android/whatshappening/AndroidManifest.xml
+++ b/client/android/whatshappening/AndroidManifest.xml
@@ -26,6 +26,7 @@
 				<data android:mimeType="image/*" />
 			</intent-filter>
         </activity>
+        <activity android:name=".ListActivity"></activity>        
     </application>
 	<uses-permission android:name="android.permission.INTERNET" />
     
